# claude-usage-widget

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
scripts/: package-macos.sh  release.sh
src/: api.rs  config.rs  idle.rs  main.rs  oauth.rs  widget.rs
src/cookies/: chrome.rs  firefox.rs  mod.rs  platform.rs  safari.rs
