[package]
name = "claude-usage"
version = "0.3.0"
edition = "2024"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
# glow (OpenGL) is used over wgpu for smaller binary size. Both x11 and wayland
# features are needed: x11 for XWayland (preferred, gives compositor shadows),
# wayland as fallback when XWayland is unavailable.
ureq = { version = "3", default-features = false, features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
aes = "0.8"
cbc = "0.1"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha1 = { version = "0.10", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tempfile = "3"
open = "5.3.3"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["screensaver"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Security_Cryptography"] }
aes-gcm = "0.10"
base64 = "0.22"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
